--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "build:css": "tailwindcss -i ./styles/input.css -o ./public/css/style.css",
+    "watch:css": "tailwindcss -i ./styles/input.css -o ./public/css/style.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +15,10 @@
   "dependencies": {
     "express": "^5.1.0",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   }
 }
